src/test/ui/issues/issue-8460-const.stderr
error: attempt to divide with overflow
  --> $DIR/issue-8460-const.rs:10:36
   |
LL |     assert!(thread::spawn(move|| { isize::MIN / -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/issue-8460-const.rs:4:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/issue-8460-const.rs:10:36
   |
LL |     assert!(thread::spawn(move|| { isize::MIN / -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^^^ attempt to divide with overflow

error: attempt to divide with overflow
  --> $DIR/issue-8460-const.rs:13:36
   |
LL |     assert!(thread::spawn(move|| { i8::MIN / -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/issue-8460-const.rs:13:36
   |
LL |     assert!(thread::spawn(move|| { i8::MIN / -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^ attempt to divide with overflow

error: attempt to divide with overflow
  --> $DIR/issue-8460-const.rs:16:36
   |
LL |     assert!(thread::spawn(move|| { i16::MIN / -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/issue-8460-const.rs:16:36
   |
LL |     assert!(thread::spawn(move|| { i16::MIN / -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^ attempt to divide with overflow

error: attempt to divide with overflow
  --> $DIR/issue-8460-const.rs:19:36
   |
LL |     assert!(thread::spawn(move|| { i32::MIN / -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/issue-8460-const.rs:19:36
   |
LL |     assert!(thread::spawn(move|| { i32::MIN / -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^ attempt to divide with overflow

error: attempt to divide with overflow
  --> $DIR/issue-8460-const.rs:22:36
   |
LL |     assert!(thread::spawn(move|| { i64::MIN / -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/issue-8460-const.rs:22:36
   |
LL |     assert!(thread::spawn(move|| { i64::MIN / -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^ attempt to divide with overflow

error: attempt to divide with overflow
  --> $DIR/issue-8460-const.rs:25:36
   |
LL |     assert!(thread::spawn(move|| { i128::MIN / -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/issue-8460-const.rs:25:36
   |
LL |     assert!(thread::spawn(move|| { i128::MIN / -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^^ attempt to divide with overflow

error: attempt to divide by zero
  --> $DIR/issue-8460-const.rs:28:36
   |
LL |     assert!(thread::spawn(move|| { 1isize / 0; }).join().is_err());
   |                                    ^^^^^^^^^^

error: attempt to divide by zero
  --> $DIR/issue-8460-const.rs:30:36
   |
LL |     assert!(thread::spawn(move|| { 1i8 / 0; }).join().is_err());
   |                                    ^^^^^^^

error: attempt to divide by zero
  --> $DIR/issue-8460-const.rs:32:36
   |
LL |     assert!(thread::spawn(move|| { 1i16 / 0; }).join().is_err());
   |                                    ^^^^^^^^

error: attempt to divide by zero
  --> $DIR/issue-8460-const.rs:34:36
   |
LL |     assert!(thread::spawn(move|| { 1i32 / 0; }).join().is_err());
   |                                    ^^^^^^^^

error: attempt to divide by zero
  --> $DIR/issue-8460-const.rs:36:36
   |
LL |     assert!(thread::spawn(move|| { 1i64 / 0; }).join().is_err());
   |                                    ^^^^^^^^

error: attempt to divide by zero
  --> $DIR/issue-8460-const.rs:38:36
   |
LL |     assert!(thread::spawn(move|| { 1i128 / 0; }).join().is_err());
   |                                    ^^^^^^^^^

error: attempt to calculate the remainder with overflow
  --> $DIR/issue-8460-const.rs:40:36
   |
LL |     assert!(thread::spawn(move|| { isize::MIN % -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/issue-8460-const.rs:40:36
   |
LL |     assert!(thread::spawn(move|| { isize::MIN % -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^^^ attempt to calculate the remainder with overflow

error: attempt to calculate the remainder with overflow
  --> $DIR/issue-8460-const.rs:43:36
   |
LL |     assert!(thread::spawn(move|| { i8::MIN % -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/issue-8460-const.rs:43:36
   |
LL |     assert!(thread::spawn(move|| { i8::MIN % -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^ attempt to calculate the remainder with overflow

error: attempt to calculate the remainder with overflow
  --> $DIR/issue-8460-const.rs:46:36
   |
LL |     assert!(thread::spawn(move|| { i16::MIN % -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/issue-8460-const.rs:46:36
   |
LL |     assert!(thread::spawn(move|| { i16::MIN % -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^ attempt to calculate the remainder with overflow

error: attempt to calculate the remainder with overflow
  --> $DIR/issue-8460-const.rs:49:36
   |
LL |     assert!(thread::spawn(move|| { i32::MIN % -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/issue-8460-const.rs:49:36
   |
LL |     assert!(thread::spawn(move|| { i32::MIN % -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^ attempt to calculate the remainder with overflow

error: attempt to calculate the remainder with overflow
  --> $DIR/issue-8460-const.rs:52:36
   |
LL |     assert!(thread::spawn(move|| { i64::MIN % -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/issue-8460-const.rs:52:36
   |
LL |     assert!(thread::spawn(move|| { i64::MIN % -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^ attempt to calculate the remainder with overflow

error: attempt to calculate the remainder with overflow
  --> $DIR/issue-8460-const.rs:55:36
   |
LL |     assert!(thread::spawn(move|| { i128::MIN % -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/issue-8460-const.rs:55:36
   |
LL |     assert!(thread::spawn(move|| { i128::MIN % -1; }).join().is_err());
   |                                    ^^^^^^^^^^^^^^ attempt to calculate the remainder with overflow

error: attempt to calculate the remainder with a divisor of zero
  --> $DIR/issue-8460-const.rs:58:36
   |
LL |     assert!(thread::spawn(move|| { 1isize % 0; }).join().is_err());
   |                                    ^^^^^^^^^^

error: attempt to calculate the remainder with a divisor of zero
  --> $DIR/issue-8460-const.rs:60:36
   |
LL |     assert!(thread::spawn(move|| { 1i8 % 0; }).join().is_err());
   |                                    ^^^^^^^

error: attempt to calculate the remainder with a divisor of zero
  --> $DIR/issue-8460-const.rs:62:36
   |
LL |     assert!(thread::spawn(move|| { 1i16 % 0; }).join().is_err());
   |                                    ^^^^^^^^

error: attempt to calculate the remainder with a divisor of zero
  --> $DIR/issue-8460-const.rs:64:36
   |
LL |     assert!(thread::spawn(move|| { 1i32 % 0; }).join().is_err());
   |                                    ^^^^^^^^

error: attempt to calculate the remainder with a divisor of zero
  --> $DIR/issue-8460-const.rs:66:36
   |
LL |     assert!(thread::spawn(move|| { 1i64 % 0; }).join().is_err());
   |                                    ^^^^^^^^

error: attempt to calculate the remainder with a divisor of zero
  --> $DIR/issue-8460-const.rs:68:36
   |
LL |     assert!(thread::spawn(move|| { 1i128 % 0; }).join().is_err());
   |                                    ^^^^^^^^^

error: aborting due to 36 previous errors

